option java_package = "com.pureland.common.protocal.vo";
option java_outer_classname = "SkillVOProtocal";

message SkillVO {
	required int32 cid 				=1;
	required int32 amount 			=2;
}